# autofollowdown

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  tests.yml
autofollowdown/: __init__.py  _term.py  advisor.py  api.py  auto.py  backends.py  benchmark.py  cli.py  demos.py  diagnose.py  diagnosis.py  flow.py  gpu.py  graph_tracing.py  ingestion.py  llm_eval.py  metrics.py  onnx_pipeline.py  pipeline.py  profiler.py
examples/: autopick_demo.py  benchmark_digits.py  benchmark_llm.py
notebooks/: autofollowdown_backends_colab.ipynb  autofollowdown_cpu_demo.ipynb  autofollowdown_demo.ipynb  autofollowdown_showcase.ipynb
tests/: test_advisor.py  test_autopick.py  test_benchmark.py  test_challenger_verification.py  test_cli_and_catalog.py  test_compression.py  test_diagnose.py  test_fixes.py  test_flow.py  test_gpu.py  test_graph_tracing.py  test_graph_tracing_stress.py  test_ingestion_onnx.py  test_llm_eval.py  test_nested_fusion.py  test_partial_activation.py  test_partial_bn.py  test_pipeline.py  test_router.py  test_stress_graph_tracing.py  test_stress_ingestion_onnx.py
